Add app.sh as resource